# promptcraft

./: .gitignore  README.md  pyproject.toml
promptcraft/: __init__.py  file_browser.py  file_chunker.py  file_filter.py  git_utils.py  main.py  models.py  project_detector.py  session_manager.py  template_manager.py
promptcraft/templates/: code-review.json  debugging.json  feature-planning.json  refactoring.json  testing.json
test_init/: .promptcraft.yml
test_manual/: .promptcraft.yml
tests/: test_phase1.py  test_phase3.py
